css/style.css
body {
    font-family: 'Arial', 'Verdana';
    background-color: #000000;
    color: #ffffff;
    margin: 20px 20px 0 20px;
    padding: 0;
}

/* main {
    max-width: 768px;
    margin: 20px auto;
    padding: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
} */

h1 {
    font-size: 42px;
    text-align: center;
    padding: 15px;
}

h2 {
    font-size: 30px;
    color: #0D0D0D;
}

p {
    font-size: 24px;
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 0;
    padding-bottom: 0;
}

img {
    width: 250px;
    display: block;
    margin: 0 auto;
    border: 10px dashed #ffffff;
    height: auto;
}

div {
    min-height: 125px;
    padding: 20px;
    border: 3px solid #ffffff;
}

.introduction {
    border-radius: 15px;
    margin-top: 15px;
    line-height: 2;
}

.red {
    background-color: #ff0000; 
    text-align: right;
    margin-left: 50px;
    border-bottom: 2px solid #ffffff;
    border-left: 5px solid #ffffff;
    border-top: none;
    border-right: none;
}

.blue {
    background-color: #0000ff; 
    text-align: left;
    margin-right: 50px;
    border-left: none;
    border-bottom: none;
    border-right: 5px solid #ffffff; 
    border-top: 2px solid #ffffff; 
}

.blue h2, .blue p {
    color: #C4C4C4;
}

.yellow {
    background-color: #ffff00; 
    text-align: right;
    margin-left: 50px;
    border-bottom: 2px solid #ffffff; 
    border-left: 5px solid #ffffff; 
    border-top: none;
    border-right: none;
}

.yellow p {
    color: #707070;
}

.green {
    background-color:#008500;
    text-align: left;
    margin-right: 50px;
    border-right: 5px solid #ffffff; 
    border-top: 2px solid #ffffff; 
    border-bottom: none;
    border-left: none;
}

.green p {
    color: #C4C4C4;
}

footer {
    background: linear-gradient(90deg, #000000, #0000ff 25%, #0066ff 70%, #000000);
    border: 5px solid #ffffff;
}

footer p {
    font-size: 20px;
    text-align: right;
    padding: 15px 15px 15px 0;
}

